# qc803_assignment

./: .coveragerc  .gitignore  .ruff.toml  Notes.md  README.md  pyproject.toml  requirements.txt
src/: __init__.py  main.py  main_noisy.py  plot_comparison.py  two-qubit-errors.py  z-errors.py
tests/: test_shor_code.py
